Updated JDepend to the latest version from https://github.com/clarkware/jdepend (minor performance improvements and 1.5 VM annotation parsing).